update config and try

--- a/D0/test.tex
+++ b/D0/test.tex
@@ -21,7 +21,7 @@ $\begin{matrix}
 \end{matrix}$
 
 \begin{equation}
-    \frac{a}{v}=c
+    \frac{a}{v}=c\varpi \varrho \sigma 
 \end{equation}
 
 \begin{enumerate}
